@@ -67,9 +67,8 @@ sub xsdocparse {
 	$parser->canonicalize_xsubs;
 	$parser->swizzle_pods;
 
-	use POSIX qw(strftime);
 	print "# THIS FILE IS AUTOMATICALLY GENERATED - ANY CHANGES WILL BE LOST\n";
-	print "# generated by $0 ".strftime ('%a %b %e %H:%M:%S %Y', localtime)."\n";
+	print "# generated by $0 ".scalar (localtime)."\n";
 	print "# input files:\n";
 	map { print "#   $_\n" } @filenames;
 	print "#\n\n";
@@ -443,10 +442,11 @@ $SIG{__WARN__} = sub {
 
 	if ($thisxsub[0] =~ /^([^(]+\s+\*?)\b([:\w]+)\s*\(\s*(.+)\s*\)\s*;?\s*$/) {
 		# all on one line
-		$xsub{return_type} = [$1]
-			unless $1 eq 'void';
 		$xsub{symname} = $2;
 		$args = $3;
+		my $r = $1;
+		$xsub{return_type} = [$r]
+			unless $r =~ /^void\s*$/;
 		shift @thisxsub; $lineno++;
 	} elsif ($thisxsub[1] =~ /^(\S+)\s*\((.+)\);?\s*$/) {
 		# multiple lines
@@ -455,7 +455,7 @@ $SIG{__WARN__} = sub {
 		# return type is on line 0
 		$thisxsub[0] =~ s/\s*$//;
 		$xsub{return_type} = [$thisxsub[0]]
-			unless $thisxsub[0] eq 'void';
+			unless $thisxsub[0] =~ /^void\s*$/;
 		shift @thisxsub; $lineno++;
 		shift @thisxsub; $lineno++;
 	}
